# AutoDiff_Framework

./: README.md  commands.md
barenet-lab1/: commands.md
barenet-lab1/src/ops/: op_cross_entropy.cuh  op_elemwise.cuh
barenet-lab1/src/utils/: tensor.cuh
barenet-lab2/: CMakeLists.txt  commands.md  lab-2.md  test_ag_tensor.py  train_mnist.py
barenet-lab2/mygrad/: engine.py
barenet-lab2/src/: bindings.cu  py_tensor_shim.hh
barenet-lab2/src/ops/: op_elemwise.cuh  op_mm.cuh  op_reduction.cuh
